# caformer

./: .gitignore  README.md  pyproject.toml
ca_reasoning/: __init__.py  aggregate.py  benchmark.py  compare.py  data.py  models.py  sweep.py  synthetic.py  train.py  training.py  visualize.py
docs/: index.html
tests/: test_smoke.py
